Creato con Colaboratory

--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -7,7 +7,8 @@
       "collapsed_sections": [
         "knYFhChjTTrp",
         "MREmB0ktTh2w"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -20,6 +21,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/diego-ciciani01/final-project-FDS/blob/main/pre_processing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# Connect to drive"
       ],
@@ -29,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 186,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -63,7 +74,7 @@
         "id": "gSfAVwoNSeoj",
         "outputId": "bd23de43-2170-48d1-a76d-bab120df73bc"
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +119,7 @@
         "id": "z51ub5DDTGHh",
         "outputId": "df5bdff7-27ee-4474-9a89-c48299ee6ef1"
       },
-      "execution_count": 209,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +150,7 @@
       "metadata": {
         "id": "DkMsVyHKUOKw"
       },
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -155,7 +166,7 @@
         "id": "xWgT80YxdlIw",
         "outputId": "231fea22-98f9-4dfe-a3d2-0bbd7aa63396"
       },
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +201,7 @@
       "metadata": {
         "id": "fFOy2GJmVmJG"
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -221,7 +232,7 @@
         "id": "hLrdlRKXTs9g",
         "outputId": "b127a2f0-3650-4ac3-8b6d-ad7047c15769"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -701,7 +712,7 @@
         "id": "qximnTW1Vn40",
         "outputId": "366324db-88ee-494f-9c2c-d27c161928b9"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1194,7 +1205,7 @@
         "id": "4kdOBWuXWYz1",
         "outputId": "d377ad57-258e-4c33-c2c5-8f4f8a8e1cac"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1682,7 +1693,7 @@
         "id": "ah8Wn_bSUjxp",
         "outputId": "43e254fb-834c-4e71-9f43-6c26186493ab"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1724,7 +1735,7 @@
         "id": "zFvI2utiie7l",
         "outputId": "e83d83a6-8b17-4b6b-a083-7630ee9194ff"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2088,7 +2099,7 @@
       "metadata": {
         "id": "mwiDchoYBXhd"
       },
-      "execution_count": 197,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2111,7 +2122,7 @@
         "id": "CwUQvJXj1RVF",
         "outputId": "92509e37-7023-42d2-d493-48a84e773a61"
       },
-      "execution_count": 198,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2143,7 +2154,7 @@
         "id": "KXyFEuye1biR",
         "outputId": "ae55c895-287a-4706-c4a6-aff67326882b"
       },
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2234,7 +2245,7 @@
         "id": "Gyw5OkqN1eUG",
         "outputId": "204c2617-b8d5-46b5-ddea-5750fdc930f8"
       },
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2266,7 +2277,7 @@
         "id": "Ocbl7wy-2gyK",
         "outputId": "132555ad-e175-4371-f81e-722c99ee96c4"
       },
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2316,7 +2327,7 @@
         },
         "outputId": "a19cd228-3676-4a13-88fb-b5f977104449"
       },
-      "execution_count": 202,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2468,14 +2479,14 @@
         "df_norm"
       ],
       "metadata": {
-        "id": "iWRce9rFI8S_",
-        "outputId": "5f21ec40-9659-4461-9a57-261fc43662dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "iWRce9rFI8S_",
+        "outputId": "5f21ec40-9659-4461-9a57-261fc43662dd"
       },
-      "execution_count": 203,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2948,13 +2959,13 @@
         "df_norm.isnull().sum()"
       ],
       "metadata": {
-        "id": "NCnBx51iVAnB",
-        "outputId": "0821f177-5266-4334-eb68-988364522748",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NCnBx51iVAnB",
+        "outputId": "0821f177-5266-4334-eb68-988364522748"
       },
-      "execution_count": 204,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2989,7 +3000,7 @@
       "metadata": {
         "id": "APGyvaLcX0fe"
       },
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2998,7 +3009,7 @@
       "metadata": {
         "id": "bATKaB7BA95J"
       },
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3015,7 +3026,7 @@
       "metadata": {
         "id": "ejePasPyDXnG"
       },
-      "execution_count": 206,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3033,7 +3044,7 @@
       "metadata": {
         "id": "pHvNTxXHWzTA"
       },
-      "execution_count": 207,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3042,7 +3053,7 @@
       "metadata": {
         "id": "_Mk8F7yqEOq6"
       },
-      "execution_count": 208,
+      "execution_count": null,
       "outputs": []
     },
     {
